[package]
name = "password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features=["derive"] }
rand = "0.8.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = 2
