[package]
name = "password"
version = "0.1.1"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "A simple password generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
rand = "0.8.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = 2
